# weather-station-agent

./: .gitignore  README.md  config.yaml  pyproject.toml
deploy/: weather-station.service
src/weather_station/: __init__.py  cli.py  main.py
src/weather_station/alerts/: __init__.py  alert_engine.py
src/weather_station/core/: __init__.py  config.py  database.py  mock_manager.py  sensor_base.py
src/weather_station/forwarding/: __init__.py  forwarder.py  service_base.py
src/weather_station/forwarding/services/: __init__.py  cwop.py  openweathermap.py  weathercloud.py  wunderground.py
src/weather_station/recording/: __init__.py  data_recorder.py  exporter.py
src/weather_station/reporting/: __init__.py  report_generator.py
src/weather_station/sensors/: __init__.py  anemometer.py  bme280.py  bme680.py  ds3231.py  mq135.py  pms5003.py  rain_gauge.py  sgp30.py  sht31.py  veml7700.py  wind_vane.py
src/weather_station/web/: __init__.py  dashboard.py
tests/: conftest.py  test_alerts.py  test_config.py  test_database.py  test_forwarding.py  test_mock_manager.py  test_recording.py  test_reporting.py  test_sensor_base.py  test_sensors.py
